Feat: Adding announcement module
